Included Flask sessions into surveys

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/app.css">
     <title>{% block title%} {% endblock %}</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container text-center">
         
         {% with messages = get_flashed_messages(with_categories=true)%}
         {% if messages %}
@@ -20,8 +21,11 @@
             </div>
         {% endif %}
         {% endwith %}
+
+        <img src="{{url_for('static', filename='survey.png')}}" alt="lost" align="middle" width="75px" class="mt-2"/>        
         
         {% block content %} {% endblock %}
+        
     </div>
 
 
