--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -7,12 +7,19 @@
     <h1>Thank-you for taking our survey!</h1>
     <h5>Here were your answers</h5>
     <hr class="col-sm-8">
-    {% for i, j in responses.items() %}
-        <b>Question</b>: {{satisfaction_survey.questions[i].question}}<br>
-        <b>Answer</b>: {{j}}
-        <br><br>
-    {% endfor %}
     
+    {% if session[size] == 'No' %}
+        <p>Sorry to hear you don't plan on shopping here again. If you'd had a problem, please contact us at <br>ihadaproblem@survey.com</p>
+        <p>You may also use this code for 10% off your next purchase <br><b>Code:</b> get10</p>
+    {% else %}
+        {% for i,j in dict_keys.items() %}
+            <b>Question</b>: {{satisfaction_survey.questions[j].question}}<br>
+            <b>Answer</b>: {{session[i]}}
+            <br><br>
+        {% endfor %}
+    {% endif %}
+    
+    <a href="/" class="btn btn-outline-danger m-3">Retake Survey</a>
     
 </div>    
 {% endblock %}
